# MarketTools

./: .gitignore  .prettierignore  README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
scripts/: README-icons.md  generate-icons-simple.js  generate-icons-simple.mjs  generate-icons.js  svg-to-png-converter.html  update-version.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: .gitkeep  README.md  icon.icns
src-tauri/src/: commands.rs  file_watcher.rs  lib.rs  main.rs  market_parser.rs  profile.rs  settings.rs
src/components/: CharacterSettingsTab.tsx  MainWindow.tsx  OverviewTab.tsx  ProfileSelector.tsx  RangeSettingsTab.tsx  StatusBar.tsx  TradeSettingsTab.tsx
src/lib/: calculations.ts  constants.ts  types.ts
